web/book/tests/examples/snapshots/examples__book__transforms__filter__examples__0.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\nfilter age > 25\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 25

