web/book/tests/examples/snapshots/examples__book__transforms__filter__examples__1.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\nfilter (age > 25 || department != \"IT\")\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 25
  OR department <> 'IT'

