web/book/tests/examples/snapshots/examples__book__transforms__filter__examples__2.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\nfilter (age | in 25..40)\n"
---
SELECT
  *
FROM
  employees
WHERE
  age BETWEEN 25 AND 40

